# wordle_yvaniak

./: .cz.toml  .gitignore  Cargo.toml  LICENSE  README.md  compose.yaml  crates.nix  deny.toml  devenv.nix  flake.nix  justfile  renovate.json  treefmt.nix  u_fmt
.github/workflows/: cachix-cache.yml  cachix-install-nix-action.yml  coverage.yml  devenv-test.yml  rust.yml  test.yml
nix/: packages.nix
src/: config.rs  gen_words.rs  lib.rs  main.rs  ui.rs
src/ui/: cli.rs  tui.rs
tests/: cmd.rs
