[package]
name = "wordle_yvaniak"
description = "A simple wordle in cli, and soon in tui and gui"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
ratatui = "0.29.0"                                  #pour le tui
rand = "0.8.5"                                      #pour le choix random du mot
unicode-segmentation = "1.12.0"                     #pour la comparaison entre charactères qui semblent humains avec les accent
tui-big-text = "0.7.0"
clap = { version = "4.5.21", features = ["cargo"] }
assert_cmd = "2.0.16"
